--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <!-- Google fonts - Montserrat for headings, Cardo for copy-->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
   <!-- theme stylesheet-->
-  <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+  <link rel="stylesheet" href="./css/style.default.css" id="theme-stylesheet">
   <!-- ekko lightbox-->
-  <link rel="stylesheet" href="css/ekko-lightbox.css">
+  <link rel="stylesheet" href="./css/ekko-lightbox.css">
   <!-- Custom stylesheet - for your changes-->
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="./css/custom.css">
   <!-- Favicon-->
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="./favicon.png">
   <!-- Tweaks for older IEs-->
   <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
