--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/P9070251.jpg');" class="intro">
+  <section id="intro" style="background-image: url('./img/P9070251.jpg');" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
@@ -88,7 +88,7 @@
 
         </div>
         <div class="col-md-5 col-md-offset-1">
-          <p><img src="img/portfoliobw.jpg" alt="" class="img-responsive img-circle"></p>
+          <p><img src="./img/portfoliobw.jpg" alt="" class="img-responsive img-circle"></p>
         </div>
       </div>
     </div>
