--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
   <meta name="robots" content="all,follow">
   <!-- Bootstrap and Font Awesome css-->
   <!-- we use cdn but you can also include local files located in css directory-->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Google fonts - Montserrat for headings, Cardo for copy-->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Cardo:400,400italic,700">
   <!-- theme stylesheet-->
-  <link rel="stylesheet" href="./css/style.default.css" id="theme-stylesheet">
+  <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
   <!-- ekko lightbox-->
-  <link rel="stylesheet" href="./css/ekko-lightbox.css">
+  <link rel="stylesheet" href="css/ekko-lightbox.css">
   <!-- Custom stylesheet - for your changes-->
-  <link rel="stylesheet" href="./css/custom.css">
+  <link rel="stylesheet" href="css/custom.css">
+
   <!-- Favicon-->
-  <link rel="shortcut icon" href="./favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
   <!-- Tweaks for older IEs-->
   <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -30,7 +31,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
-  <section id="intro" style="background-image: url('./img/P9070251.jpg');" class="intro">
+  <section id="intro" style="background-image: url('img/P9070251.jpg');" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
@@ -76,19 +77,15 @@
         <div class="col-md-6">
           <h2 class="heading">About me</h2>
           <p class="lead"></p>
-          <p>I am attending a Full Stack 12-week Coding Bootcamp at UT Austin from which I will graduate in October 2017. I'm currently building a network and am searching for a position in full stack web development. While attending this Bootcamp, I am
-            concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with
-            a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
+          <p>I am attending a Full Stack 12-week Coding Bootcamp at UT Austin from which I will graduate in October 2017. I'm currently building a network and am searching for a position in full stack web development. While attending this Bootcamp, I am concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
-          <p>This brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
-            While allied health is where I have honed my skiles in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
-            on the future.</p>
+          <p>This brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce. While allied health is where I have honed my skiles in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection on the future.</p>
 
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
 
         </div>
         <div class="col-md-5 col-md-offset-1">
-          <p><img src="./img/portfoliobw.jpg" alt="" class="img-responsive img-circle"></p>
+          <p><img src="img/portfoliobw.jpg" alt="" class="img-responsive img-circle"></p>
         </div>
       </div>
     </div>
