--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/P9070251.jpg');" class="intro">
+  <section id="intro" style="background-image: url('img/P9070251.JPG');" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
