--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="" data-footer="Inventory Tracking"><img src="img/Bam.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
         </div>
         <!-- <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/trainTime/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
