rid lightbox for functionality

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/psychic/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/psychic/" title=""  data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/train.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title=""  data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/train.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 9" data-footer="Group project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="Portfolio image 9" data-footer="Group project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
         </div>
       </div>
       <div class="row">
