--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
           <div class="box"><a href="https://jf-utex.github.io/trainTime/" title=""  data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/train.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="Portfolio image 9" data-footer="Group project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title=""  data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
         </div>
         <!-- <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
         </div> -->
 
         <!-- <div class="col-sm-4">
