--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <li><a href="#about">About </a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#text">Text</a></li>
+              <!-- <li><a href="#text">Text</a></li> -->
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
@@ -152,9 +152,9 @@
         <div class="col-sm-4">
           <div class="box"><a href="https://github.com/jf-utex/Bamazon" title=""  data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
         </div>
-        <!-- <div class="col-sm-4">
+        <div class="col-sm-4">
           <div class="box"><a href="" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
-        </div> -->
+        </div>
 
         <!-- <div class="col-sm-4">
           <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
