--- a/index.html
+++ b/index.html
@@ -150,11 +150,15 @@
         </div>
       </div>
       <div class="row">
+        <!-- <div class="col-sm-4">
+          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
+        </div> -->
         <div class="col-sm-4">
           <div class="box"><a href="https://github.com/jf-utex/Bamazon" title=""  data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
         </div>
+
         <div class="col-sm-4">
-          <div class="box"><a href="" title="" data-gallery="portfolio" data-title="Portfolio image 4" data-footer="Some footer information"><img src="img/portfolio-4.jpg" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/Githublink.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <!-- <div class="col-sm-4">
