fixed prtfolio images and links

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
           <div class="box"><a href="https://jf-utex.github.io/psychic/" title=""  data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title=""  data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/train.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title=""  data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/traintime.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
         </div>
       </div>
       <div class="row">
@@ -158,7 +158,7 @@
         </div>
 
         <div class="col-sm-4">
-          <div class="box"><a href="" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/Githublink.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/githublink.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <!-- <div class="col-sm-4">
