--- a/index.html
+++ b/index.html
@@ -78,9 +78,13 @@
         <div class="col-md-6">
           <h2 class="heading">About me</h2>
           <p class="lead"></p>
-          <p>I am attending a Full Stack 12-week Coding Bootcamp at UT Austin from which I will graduate in October 2017. I'm currently building a network and am searching for a position in full stack web development. While attending this Bootcamp, I am concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
+          <p>I am attending a Full Stack 12-week Coding Bootcamp at UT Austin from which I will graduate in October 2017. I'm currently building a network and am searching for a position in full stack web development. While attending this Bootcamp, I am
+            concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with
+            a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
-          <p>This brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce. While allied health is where I have honed my skiles in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection on the future.</p>
+          <p>This brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
+            While allied health is where I have honed my skiles in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
+            on the future.</p>
 
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
 
@@ -140,33 +144,31 @@
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/psychic/" title=""  data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/psychic/" title="" data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title=""  data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/traintime.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/trainTime/" title="" data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/traintime.png" alt="" class="img-responsive"></a></div>
         </div>
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title="" data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
         </div>
       </div>
       <div class="row">
-        <!-- <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title=""  data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where2go.png" alt="" class="img-responsive"></a></div>
-        </div> -->
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title=""  data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
           <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/githublink.png" alt="" class="img-responsive"></a></div>
         </div>
 
-        <!-- <div class="col-sm-4">
-          <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
-        </div> -->
-        <!-- <div class="col-sm-4">
+        <div class="col-sm-4">
+          <!-- <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
+        </div>
+         <div class="col-sm-4">
           <div class="box"><a href="img/portfolio-6.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 6" data-footer="Some footer information"><img src="img/portfolio-6.jpg" alt="" class="img-responsive"></a></div>
         </div> -->
+        </div>
       </div>
       <div class="row">
         <!-- <div class="col-sm-4">
