--- a/index.html
+++ b/index.html
@@ -143,17 +143,23 @@
         </div>
       </div>
       <div class="row">
+
         <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/psychic/" title="" data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
         </div>
+
         <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/trainTime/" title="" data-gallery="portfolio" data-title="Train Application" data-footer="Calculates train arrival time using moment.js and calculations in JavaScript"><img src="img/traintime.png" alt="" class="img-responsive"></a></div>
         </div>
+
         <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title="" data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
         </div>
+
       </div>
+
       <div class="row">
+
         <div class="col-sm-4">
           <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
         </div>
@@ -163,30 +169,16 @@
         </div>
 
         <div class="col-sm-4">
-          <!-- <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div>
+          <!-- <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div> -->
         </div>
-         <div class="col-sm-4">
-          <div class="box"><a href="img/portfolio-6.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 6" data-footer="Some footer information"><img src="img/portfolio-6.jpg" alt="" class="img-responsive"></a></div>
-        </div> -->
-        </div>
-      </div>
-      <div class="row">
-        <!-- <div class="col-sm-4">
-          <div class="box"><a href="img/portfolio-7.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 7" data-footer="Some footer information"><img src="img/portfolio-7.jpg" alt="" class="img-responsive"></a></div>
-        </div> -->
-        <!-- </a> -->
-        <!-- <div class="col-sm-4">
-          <div class="box"><a href="img/portfolio-8.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 8" data-footer="Some footer information"><img src="img/portfolio-8.jpg" alt="" class="img-responsive"></a></div>
-        </div> -->
-        <!-- </a> -->
 
-        <!-- </a> -->
       </div>
-    </div>
-    <!-- </div>
-    </div> -->
+
+      </div>
   </section>
+
   <!-- Portfolio / gallery end-->
+  
   <!-- text page-->
   <!-- <section id="text" style="background-color: #333;" class="text-page section-inverse">
     <div class="container">
