--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/P9070251.JPG');" class="intro">
+  <section id="intro" style="background-image: url('img/P9070251.JPG')" ; class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
@@ -134,12 +134,12 @@
   <!-- Portfolio / gallery-->
   <section id="portfolio" class="gallery">
     <div class="container clearfix">
-      <!-- <div class="row">
-        <div class="col-md-12"> -->
       <div class="row">
-        <div class="col-md-12 col-lg-8">
-          <h2 class="heading">Portfolio</h2>
-          <p>Below are projects completed within the last year. </p>
+        <div class="col-md-12">
+          <!-- <div class="col-md-12 col-lg-8"> -->
+            <h2 class="heading">Portfolio</h2>
+            <p>Below are projects completed within the last year. </p>
+          <!-- </div> -->
         </div>
       </div>
       <div class="row">
@@ -171,14 +171,12 @@
         <div class="col-sm-4">
           <!-- <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div> -->
         </div>
-
       </div>
-
-      </div>
+    </div>
   </section>
 
   <!-- Portfolio / gallery end-->
-  
+
   <!-- text page-->
   <!-- <section id="text" style="background-color: #333;" class="text-page section-inverse">
     <div class="container">
@@ -263,7 +261,6 @@
         </div>
       </div>
     </div>
-    </div>
   </section>
   <!-- <div id="map"></div>
   <footer style="background-color: #111;" class="section-inverse"> -->
@@ -286,7 +283,7 @@
     window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
   </script>
   <!-- Bootstrap CDN-->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
   <script src="js/jquery.cookie.js"></script>
   <!-- Lightbox-->
