--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       <div class="row">
         <div class="col-md-12">
           <!-- <div class="col-md-12 col-lg-8"> -->
-            <h2 class="heading">Portfolio</h2>
-            <p>Below are projects completed within the last year. </p>
+          <h2 class="heading">Portfolio</h2>
+          <p>Below are projects completed within the last year. </p>
           <!-- </div> -->
         </div>
       </div>
@@ -165,7 +165,7 @@
         </div>
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/githublink.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/github.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
