--- a/index.html
+++ b/index.html
@@ -155,13 +155,11 @@
         <div class="col-sm-4">
           <div class="box"><a href="https://jf-utex.github.io/WhereToGo/" title="" data-gallery="portfolio" data-title="WheretoGo App" data-footer="Team project integrating 3 API's"><img src="img/where.png" alt="" class="img-responsive"></a></div>
         </div>
-
       </div>
-
       <div class="row">
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/bam.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/shop.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
