update with full stack burger application deployed on Heroku

--- a/index.html
+++ b/index.html
@@ -163,12 +163,14 @@
         </div>
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/github.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://warm-beach-51608.herokuapp.com/" title="" data-gallery="portfolio" data-title="Front end and Back End" data-footer="Some footer information"><img src="img/burger app.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
-          <!-- <div class="box"><a href="img/portfolio-5.jpg" title="" data-toggle="lightbox" data-gallery="portfolio" data-title="Portfolio image 5" data-footer="Some footer information"><img src="img/portfolio-5.jpg" alt="" class="img-responsive"></a></div> -->
+          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/github.png" alt="" class="img-responsive"></a></div>
         </div>
+
+
       </div>
     </div>
   </section>
