--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
           <p>This brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
-            While allied health is where I have honed my skiles in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
+            While allied health is where I have honed my skills in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
             on the future.</p>
 
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
