--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </section>
   <!-- about end-->
   <!-- Services-->
-  <section id="services" style="background-color: #eee">
+  <section id="services" style="background-color: #648396">
     <div class="container">
       <div class="row services">
         <div class="col-md-12">
@@ -202,7 +202,7 @@
   </section> -->
   <!-- text page end-->
   <!-- contact-->
-  <section id="contact" style="background-color: #333;" class="text-page section-inverse">
+  <section id="contact" style="background-color: #648396;" class="text-page section-inverse">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -269,10 +269,6 @@
       <div class="col-md-6">
         <p>&copy;2017 Jeannie Flaherty</p>
       </div>
-      <div class="col-md-6">
-        <p class="credit">Template by <a href="https://bootstrapious.com/tutorials">Bootstrapious</a></p>
-        <!-- Please do not remove the backlink to us unless you support the development at https://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :) -->
-      </div>
     </div>
   </div>
   </footer>
@@ -297,23 +293,7 @@
   <script src="js/gmaps.js"></script>
   <!-- main script-->
   <script src="js/front.js"></script>
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-  <script>
-    (function(b, o, i, l, e, r) {
-      b.GoogleAnalyticsObject = l;
-      b[l] || (b[l] =
-        function() {
-          (b[l].q = b[l].q || []).push(arguments)
-        });
-      b[l].l = +new Date;
-      e = o.createElement(i);
-      r = o.getElementsByTagName(i)[0];
-      e.src = '//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e, r)
-    }(window, document, 'script', 'ga'));
-    ga('create', 'UA-XXXXX-X');
-    ga('send', 'pageview');
-  </script>
+
 </body>
 
 </html>
