addition of Crystal Collector

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="row">
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://jf-utex.github.io/psychic/" title="" data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Simple Psychic Game in JavaScript"><img src="img/psychic.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://jf-utex.github.io/Collect-Crystals/" title="" data-gallery="portfolio" data-title="Guess The Letter" data-footer="A Game in JavaScript"><img src="img/crystals.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
