--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
           <div class="navbar-header">
             <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"></a>
           </div>
-          <div id="navigation" class="collapse navbar-collapse navbar-right">
+          <!-- <div id="navigation" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#intro">Home</a></li>
               <li><a href="#about">About </a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">Contact</a></li> -->
               <!-- <li><a href="#text">Text</a></li> -->
 
-            </ul>
-          </div>
+            <!-- </ul>
+          </div> -->
         </div>
       </div>
     </div>
