--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with
             a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
-          <p>This brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
+          <p>This has brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
             While allied health is where I have honed my skills in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
-            on the future.</p>
+            on the future.  I am excited to learn more and practice Agile Development as the communication aspect of this practice leads right into my wheelhouse.</p>
 
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
 
