--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <h2 class="heading">Contact Me</h2>
           <div class="row">
             <div class="col-md-4">
-              <p> I can be reached by the methods below or feel free to reach me at: jflaherty2862@gmail.com.</p>
+            
               <p class="social">
                 <!-- <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a> -->
                 <a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
@@ -255,7 +255,7 @@
             <!-- <a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="https://github.com/jf-utex?tab=repositories" title="" class="github"><i class="fa fa-github"></i></a> -->
             <!-- <a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a> -->
-            <!-- <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p> -->
+            <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p>
           </div>
         </div>
       </div>
@@ -275,8 +275,9 @@
   <!-- jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>
-    window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')
-  </script>
+  window.jQuery ||
+  document.write('<script src="js/jquery-1.11.0.min.js"></script>');
+</script>
   <!-- Bootstrap CDN-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
