--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
           <div class="navbar-header">
             <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"></a>
           </div>
-          <!-- <div id="navigation" class="collapse navbar-collapse navbar-right">
+          <div id="navigation" class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#intro">Home</a></li>
               <li><a href="#about">About </a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#contact">Contact</a></li> -->
-              <!-- <li><a href="#text">Text</a></li> -->
+              <li><a href="#text">Text</a></li>
 
-            <!-- </ul>
-          </div> -->
+          </ul>
+          </div>
         </div>
       </div>
     </div>
   </header>
-  <!-- /.navbar-->
+<!-- </navbar> -->
   <!-- about-->
   <section id="about" class="text">
     <div class="container">
@@ -209,7 +209,7 @@
           <h2 class="heading">Contact Me</h2>
           <div class="row">
             <div class="col-md-4">
-            
+
               <p class="social">
                 <!-- <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a> -->
                 <a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
@@ -255,7 +255,7 @@
             <!-- <a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="https://github.com/jf-utex?tab=repositories" title="" class="github"><i class="fa fa-github"></i></a> -->
             <!-- <a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a> -->
-            <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p>
+            <!-- <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p> -->
           </div>
         </div>
       </div>
