adjustment ot overlay and contact as well as navbar

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
               <li><a href="#about">About </a></li>
               <li><a href="#services">Services</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#contact">Contact</a></li> -->
-              <li><a href="#text">Text</a></li>
+              <li><a href="#contact">Contact</a></li>
+              <!-- <li><a href="#text">Text</a></li> -->
 
           </ul>
           </div>
@@ -78,7 +78,7 @@
         <div class="col-md-6">
           <h2 class="heading">About me</h2>
           <p class="lead"></p>
-          <p>I am attending a Full Stack 12-week Coding Bootcamp at UT Austin from which I will graduate in October 2017. I'm currently building a network and am searching for a position in full stack web development. While attending this Bootcamp, I am
+          <p>I am a Full Stack Web Developer and am currently searching for a position that will allow me to sharpen my coding skills, work in an agile environment and produce a product I am invested in. While attending a Bootcamp for coding, I have been
             concurrently finishing my MA in Human Dimensions of Organizations at the University of Texas. Prior to that, I earned my BS in Zoology, a BA in Liberal Arts with a minor in Computer Science. I have spent almost 30 years in patient care with
             a focus on pediatrics. During this time, I learned that while patient management is widely researched and explained, leadership in healthcare begs for more exploration.</p>
 
