added capstone link

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="row">
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex/Bamazon" title="" data-gallery="portfolio" data-title="Inventory Tracking" data-footer="Inventory Tracking"><img src="img/shop.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://uthdo2017.herokuapp.com/" title="" data-gallery="portfolio" data-title="M.A. Capstone Project" data-footer="M.A. Capstone Project"><img src="img/capstone.jpg" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
