--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@
   <div class="container">
     <div class="row copyright">
       <div class="col-md-6">
-        <p>&copy;2017 Jeannie Flaherty</p>
+        <p>
+          <img src="/img/logo.png" alt="" width="100" </p>
+
       </div>
     </div>
   </div>
