--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
   <!-- Bootstrap and Font Awesome css-->
-  <!-- we use cdn but you can also include local files located in css directory-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <!-- Google fonts - Montserrat for headings, Cardo for copy-->
@@ -23,10 +22,7 @@
 
   <!-- Favicon-->
   <link rel="shortcut icon" href="favicon.png">
-  <!-- Tweaks for older IEs-->
-  <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+
 </head>
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
@@ -40,37 +36,34 @@
             <p class="italic">Hello, nice to meet you!</p>
             <h1>Jeannie Flaherty</h1>
             <h1>Full Stack Developer</h1>
-            <p class="italic"></p>
           </div>
         </div>
       </div>
     </div>
   </section>
   <!-- intro end-->
-  <!-- navbar-->
-  <header class="header">
-    <div class="sticky-wrapper">
-      <div role="navigation" class="navbar navbar-default">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"></a>
-          </div>
-          <div id="navigation" class="collapse navbar-collapse navbar-right">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#intro">Home</a></li>
-              <li><a href="#about">About </a></li>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <!-- <li><a href="#text">Text</a></li> -->
-
-          </ul>
+  <navbar>
+    <header class="header">
+      <div class="sticky-wrapper">
+        <div role="navigation" class="navbar navbar-default">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-btn btn-sm navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#intro" class="navbar-brand scroll-to"></a>
+            </div>
+            <div id="navigation" class="collapse navbar-collapse navbar-right">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#intro">Home</a></li>
+                <li><a href="#about">About </a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </header>
-<!-- </navbar> -->
+    </header>
+  </navbar>
   <!-- about-->
   <section id="about" class="text">
     <div class="container">
@@ -84,7 +77,7 @@
 
           <p>This has brought me to my studies at the University of Texas where I hope to translate my new understanding about organizations and the ethical, psychological and sociological way we treat our employees into a more productive and engaged workforce.
             While allied health is where I have honed my skills in human relations, I am making a shift into technology to allow further growth and learning potential. I love solving problems and helping others relate to change with a positive reflection
-            on the future.  I am excited to learn more and practice Agile Development as the communication aspect of this practice leads right into my wheelhouse.</p>
+            on the future. I am excited to learn more and practice Agile Development as the communication aspect of this practice leads right into my wheelhouse.</p>
 
           <p>In my spare time, when I'm not solving elusive web development puzzles, I enjoy time with my supportive husband and three dogs. Fun for me is to train and compete in canine agility. </p>
 
@@ -96,6 +89,7 @@
     </div>
   </section>
   <!-- about end-->
+
   <!-- Services-->
   <section id="services" style="background-color: #648396">
     <div class="container">
@@ -107,7 +101,7 @@
               <div class="box">
                 <div class="icon"><i class="fa fa-desktop"></i></div>
                 <h4>Webdesign</h4>
-                <p>Front End Design with data in mind.</p>
+                <p>Front End Design with Data in Mind.</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -121,7 +115,7 @@
               <div class="box">
                 <div class="icon"><i class="fa fa-sitemap"></i></div>
                 <h4>Leadership</h4>
-                <p>Passion for people</p>
+                <p>Passion for People</p>
               </div>
             </div>
           </div>
@@ -136,10 +130,8 @@
     <div class="container clearfix">
       <div class="row">
         <div class="col-md-12">
-          <!-- <div class="col-md-12 col-lg-8"> -->
           <h2 class="heading">Portfolio</h2>
           <p>Below are projects completed within the last year. </p>
-          <!-- </div> -->
         </div>
       </div>
       <div class="row">
@@ -163,13 +155,12 @@
         </div>
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://warm-beach-51608.herokuapp.com/" title="" data-gallery="portfolio" data-title="Front end and Back End" data-footer="Some footer information"><img src="img/burger app.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://warm-beach-51608.herokuapp.com/" title="" data-gallery="portfolio" data-title="Front end and Back End" data-footer=""><img src="img/burger app.png" alt="" class="img-responsive"></a></div>
         </div>
 
         <div class="col-sm-4">
-          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer="Some footer information"><img src="img/github.png" alt="" class="img-responsive"></a></div>
+          <div class="box"><a href="https://github.com/jf-utex" title="" data-gallery="portfolio" data-title="GitHub Link" data-footer=""><img src="img/github.png" alt="" class="img-responsive"></a></div>
         </div>
-
 
       </div>
     </div>
@@ -177,30 +168,6 @@
 
   <!-- Portfolio / gallery end-->
 
-  <!-- text page-->
-  <!-- <section id="text" style="background-color: #333;" class="text-page section-inverse">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class="heading">Text page</h2>
-          <div class="row">
-            <div class="col-sm-6">
-              <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green
-                oh. </p>
-              <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
-            </div>
-            <div class="col-sm-6">
-              <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken
-                opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-              <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till
-                on easy. Form not calm new fail. </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- text page end-->
   <!-- contact-->
   <section id="contact" style="background-color: #648396;" class="text-page section-inverse">
     <div class="container">
@@ -208,78 +175,33 @@
         <div class="col-md-12">
           <h2 class="heading">Contact Me</h2>
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-2">
 
               <p class="social">
                 <!-- <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a> -->
                 <a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
                 <a href="https://github.com/jf-utex?tab=repositories" title="" class="github"><i class="fa fa-github"></i></a>
                 <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p>
-              <!-- <form id="contact-form" method="post" action="#" class="contact-form">
-                <div class="controls">
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label for="name">First Name *</label>
-                        <input type="text" name="name" placeholder="First Name" required="required" class="form-control">
-                      </div>
-                    </div>
-                    <div class="col-sm-6">
-                      <div class="form-group">
-                        <label for="surname">Last Name *</label>
-                        <input type="text" name="surname" placeholder="Last Name" required="required" class="form-control">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label for="surname">email *</label>
-                    <input type="email" name="email" placeholder="Email Address" required="required" class="form-control">
-                  </div>
-                  <div class="form-group">
-                    <label for="surname">Looking forward to hearing from you *</label>
-                    <textarea rows="4" name="message" placeholder="Enter your message" required="required" class="form-control"></textarea>
-                  </div>
-                  <div class="text-center">
-                    <input type="submit" name="name" value="Send message" class="btn btn-primary btn-block">
-                  </div>
-                </div>
-              </form> -->
             </div>
-            <!-- <div class="col-md-6"> -->
-            <!-- <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken
-                opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-              <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green
-                oh. </p> -->
-            <!-- <p class="social"> -->
-            <!-- <a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a> -->
-            <!-- <a href="https://www.linkedin.com/in/jeannie-flaherty-369427122/" title="" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                <a href="https://github.com/jf-utex?tab=repositories" title="" class="github"><i class="fa fa-github"></i></a> -->
-            <!-- <a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a> -->
-            <!-- <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p> -->
+            <div class="col-md-10"></div>
+            <div class="row">
+              <div align="right">
+                <img src="img/bearlogo.png" alt="" width="200" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- <div id="map"></div>
-  <footer style="background-color: #111;" class="section-inverse"> -->
-  <div class="container">
-    <div class="row copyright">
-      <div class="col-md-6">
-        <p>
-          <img src="/img/logo.png" alt="" width="100" </p>
 
-      </div>
-    </div>
-  </div>
-  </footer>
   <!-- Javascript files-->
   <!-- jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>
-  window.jQuery ||
-  document.write('<script src="js/jquery-1.11.0.min.js"></script>');
-</script>
+    window.jQuery ||
+      document.write('<script src="js/jquery-1.11.0.min.js">
+  </script>')</script>
   <!-- Bootstrap CDN-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
@@ -290,9 +212,6 @@
   <!-- Sticky + Scroll To scripts for navbar-->
   <script src="js/jquery.sticky.js"></script>
   <script src="js/jquery.scrollTo.min.js"></script>
-  <!-- google maps-->
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;amp;sensor=false"></script>
-  <script src="js/gmaps.js"></script>
   <!-- main script-->
   <script src="js/front.js"></script>
 
