--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div id="navigation" class="collapse navbar-collapse navbar-right">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#intro">Home</a></li>
-                <li><a href="#about">About </a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -91,7 +91,7 @@
   <!-- about end-->
 
   <!-- Services-->
-  <section id="services" style="background-color: #648396">
+  <section id="services" style="background-color: black" color: "white">
     <div class="container">
       <div class="row services">
         <div class="col-md-12">
@@ -183,17 +183,20 @@
                 <a href="https://github.com/jf-utex?tab=repositories" title="" class="github"><i class="fa fa-github"></i></a>
                 <a href="mailto:jflaherty@utexas.edu" title="" class="email"><i class="fa fa-envelope"></i></a></p>
             </div>
-            <div class="col-md-10"></div>
-            <div class="row">
-              <div align="right">
-                <img src="img/bearlogo.png" alt="" width="200" />
-              </div>
-            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- <footer>
+    <div class="col-md-10">
+    <div class="row">
+      <div align="right">
+        <img src="img/bearlogo.png" alt="" width="200" />
+      </div>
+      </div>
+    </div>
+  </footer> -->
 
   <!-- Javascript files-->
   <!-- jQuery-->
