--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="no-js">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +23,6 @@
   <link rel="shortcut icon" href="favicon.png">
 
 </head>
-
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
   <section id="intro" style="background-image: url('img/P9070251.JPG')" ; class="intro">
@@ -42,8 +40,8 @@
     </div>
   </section>
   <!-- intro end-->
-  <navbar>
-    <header class="header">
+  <!-- <navbar> -->
+    <!-- <header class="header">
       <div class="sticky-wrapper">
         <div role="navigation" class="navbar navbar-default">
           <div class="container">
@@ -53,17 +51,18 @@
             <div id="navigation" class="collapse navbar-collapse navbar-right">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#intro">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About </a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#text">Text</a></li>
                 <li><a href="#contact">Contact</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-    </header>
-  </navbar>
+    </header> -->
+  <!-- </.navbar> -->
   <!-- about-->
   <section id="about" class="text">
     <div class="container">
@@ -175,6 +174,8 @@
         <div class="col-md-12">
           <h2 class="heading">Contact Me</h2>
           <div class="row">
+
+
             <div class="col-md-2">
 
               <p class="social">
@@ -188,35 +189,54 @@
       </div>
     </div>
   </section>
-  <!-- <footer>
-    <div class="col-md-10">
-    <div class="row">
-      <div align="right">
-        <img src="img/bearlogo.png" alt="" width="200" />
-      </div>
+  <footer style="background-color: #111;" class="section-inverse">
+    <div class="container">
+      <div class="row copyright">
+        <div class="col-md-6">
+          <p>&copy;2017 JFlaherty Designs</p>
+        </div>
+        <div class="col-md-6">
+          </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
   <!-- Javascript files-->
   <!-- jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>
-    window.jQuery ||
-      document.write('<script src="js/jquery-1.11.0.min.js">
-  </script>')</script>
+  <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
   <!-- Bootstrap CDN-->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
   <script src="js/jquery.cookie.js"></script>
   <!-- Lightbox-->
-  <script src="js/ekko-lightbox.js">
-  </script>
+  <script src="js/ekko-lightbox.js"> </script>
   <!-- Sticky + Scroll To scripts for navbar-->
   <script src="js/jquery.sticky.js"></script>
   <script src="js/jquery.scrollTo.min.js"></script>
+  <!-- google maps-->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+  <!-- to use it on your site, generate your own API key for Google Maps and paste it above -->
+  <script src="js/gmaps.js"></script>
   <!-- main script-->
   <script src="js/front.js"></script>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
+  <script>
+  (function(b, o, i, l, e, r) {
+  b.GoogleAnalyticsObject = l;
+  b[l] ||
+    (b[l] = function() {
+      (b[l].q = b[l].q || []).push(arguments);
+    });
+  b[l].l = +new Date();
+  e = o.createElement(i);
+  r = o.getElementsByTagName(i)[0];
+  e.src = '//www.google-analytics.com/analytics.js';
+  r.parentNode.insertBefore(e, r);
+})(window, document, 'script', 'ga');
+ga('create', 'UA-XXXXX-X');
+ga('send', 'pageview');
+</script>
 
 </body>
 
