--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,6 +24,7 @@
   <link rel="shortcut icon" href="favicon.png">
 
 </head>
+
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
   <section id="intro" style="background-image: url('img/P9070251.JPG')" ; class="intro">
@@ -41,7 +43,7 @@
   </section>
   <!-- intro end-->
   <!-- <navbar> -->
-    <!-- <header class="header">
+  <!-- <header class="header">
       <div class="sticky-wrapper">
         <div role="navigation" class="navbar navbar-default">
           <div class="container">
@@ -196,7 +198,7 @@
           <p>&copy;2017 JFlaherty Designs</p>
         </div>
         <div class="col-md-6">
-          </div>
+        </div>
       </div>
     </div>
   </footer>
@@ -204,39 +206,26 @@
   <!-- Javascript files-->
   <!-- jQuery-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
+  <script>
+  window.jQuery ||
+  document.write('<script src="js/jquery-1.11.0.min.js"></script>');
+</script>
   <!-- Bootstrap CDN-->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <!-- jQuery Cookie - For Demo Purpose-->
   <script src="js/jquery.cookie.js"></script>
   <!-- Lightbox-->
-  <script src="js/ekko-lightbox.js"> </script>
+  <script src="js/ekko-lightbox.js">
+  </script>
   <!-- Sticky + Scroll To scripts for navbar-->
   <script src="js/jquery.sticky.js"></script>
   <script src="js/jquery.scrollTo.min.js"></script>
   <!-- google maps-->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
-  <!-- to use it on your site, generate your own API key for Google Maps and paste it above -->
+
   <script src="js/gmaps.js"></script>
   <!-- main script-->
   <script src="js/front.js"></script>
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-  <script>
-  (function(b, o, i, l, e, r) {
-  b.GoogleAnalyticsObject = l;
-  b[l] ||
-    (b[l] = function() {
-      (b[l].q = b[l].q || []).push(arguments);
-    });
-  b[l].l = +new Date();
-  e = o.createElement(i);
-  r = o.getElementsByTagName(i)[0];
-  e.src = '//www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e, r);
-})(window, document, 'script', 'ga');
-ga('create', 'UA-XXXXX-X');
-ga('send', 'pageview');
-</script>
 
 </body>
 
