--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@
     <div class="container">
       <div class="row copyright">
         <div class="col-md-6">
+          <!-- <img src="img/bearlogo.png" height:"150" alt="" class="img-responsive" ></a></div> -->
           <p>&copy;2017 JFlaherty Designs</p>
+
         </div>
         <div class="col-md-6">
         </div>
