--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/P9070251.JPG')" ; class="intro">
+  <section id="intro" style="background-image: url('img/uttowerbw.JPG')" ; class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
@@ -35,7 +35,7 @@
           <div class="col-md-8 col-md-offset-2 col-sm-12">
             <p class="italic">Hello, nice to meet you!</p>
             <h1>Jeannie Flaherty</h1>
-            <h1>Full Stack Developer</h1>
+            <h1>Web Developer</h1>
           </div>
         </div>
       </div>
