--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="120">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/uttowerbw.JPG')" ; class="intro">
+  <section id="intro" style="background-image: url('img/uttowerbw.jpg')" ; class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
