--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body data-spy="scroll" data-target="#navigation" data-offset="100">
   <!-- intro-->
-  <section id="intro" style="background-image: url('img/uttowerbw.jpg');" class="intro">
+  <section id="intro" style="background-image: url('img/Texas.jpg');" class="intro">
     <div class="overlay"></div>
     <div class="content">
       <div class="container clearfix">
